--- a/css/styles.css
+++ b/css/styles.css
@@ -31,14 +31,6 @@ body {
   color: var(--primary-text-color);
 }
 
-.container {
-  width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
-  /* outline: 2px solid red; */
-}
-
 .link {
   text-decoration: none;
 }
@@ -46,6 +38,10 @@ body {
 .list {
   list-style: none;
   column-gap: 24px;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 .button {
@@ -78,6 +74,10 @@ body {
   margin: -1px;
 }
 /*------------------- HEADER----------------- */
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
 .page-header-container {
   display: flex;
   align-items: center;
@@ -89,15 +89,9 @@ body {
   align-items: center;
 }
 
-.page-header {
-  padding-top: 24px;
-  padding-bottom: 24px;
-  border-bottom: 1px solid #e7e9fc;
-}
-
 .header-link:hover,
 .header-link:focus,
-.header-link:after,
+.header-link:active,
 .header-link.current {
   color: var(--accent-color);
 }
@@ -117,96 +111,60 @@ body {
   background: var(--accent-color);
   border-radius: 2px;
 }
-/* .header-link:hover::after,
-.header-link:focus::after { */
 
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
-  line-height: 1.33;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-decoration: none;
   color: var(--title-text-color);
-  margin-right: 76px;
 }
 
 .accent {
   color: #4d5ae5;
 }
 
-.header-list {
-  display: flex;
-  /* margin-right: 332px; */
-}
-
-.header-item:not(:last-child) {
-  margin-right: 40px;
-}
-
-.header-link {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--title-text-color);
-  transition: color var(--transition-duration-and-func);
-}
-
-/* .header-link:is(:hover, :focus) {
-  color: var(--accent-color);
-} */
-
-.box-address {
-  display: flex;
-  margin-left: auto;
-  gap: 40px;
-}
-
-.header-address {
-  color: var(--primary-text-color);
-  font-style: normal;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  transition: color var(--transition-duration-and-func),
-    border var(--transition-duration-and-func);
-}
-
-.header-address:is(:hover, :focus) {
-  color: var(--accent-color);
-  border: 1px solid var(--accent-color);
-  border: none;
-}
 /*------------------- HEADER----------------- */
 
 /*------------------- SERVICE----------------- */
 .service {
   text-align: center;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 112px;
+  padding-bottom: 112px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(../images/people-office-mob.jpg);
   background-color: #2e2f42;
-  max-width: 1440px;
-  height: 600px;
   margin-left: auto;
   margin-right: auto;
   background-size: cover;
 }
 
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .service {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office-mob-2x.jpg);
+  }
+}
+
 .service-title {
-  width: 500px;
+  max-width: 320px;
   text-align: center;
   color: #ffffff;
-  margin: 0 auto 48px;
+  margin: 0 auto 72px;
   font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
 }
 
@@ -233,57 +191,43 @@ body {
 
 /*------------------- RULES----------------- */
 .rules {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .rules-list {
   display: flex;
-  /* flex-wrap: wrap; */
-  /* justify-content: space-between; */
-}
-
-/* .rules-item:not(:last-child) {
-  margin-right: 24px;
-} */
-
-.rules-item {
-  flex-basis: calc((100% - 72px) / 4);
-}
-
-.rules-item {
-  width: 264px;
+  flex-wrap: wrap;
+  gap: 72px;
 }
 
 .rules-block {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 264px;
-  height: 112px;
-  background: #f4f4fd;
-  border-radius: 4px;
-  gap: 24px;
-  margin-bottom: 8px;
+  display: none;
 }
 
 .rules-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
+  margin-bottom: 8px;
 }
 
 .rules-text {
-  font-weight: 400;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+
+/* .rules-text:not(:last-child) {
+  margin-bottom: 72px;
+} */
 /*------------------- RULES----------------- */
 /*------------------- PRESENTATION----------------- */
-.presentation {
+/* .presentation {
   padding-bottom: 120px;
 }
 
@@ -304,21 +248,24 @@ body {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--title-text-color);
-}
+} */
 
 /*------------------- PRESENTATION----------------- */
 /*------------------- TEAM----------------- */
 .team {
   background: #f4f4fd;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .team-list {
   display: flex;
+  justify-content: center;
+  /* flex-direction: row; */
   flex-wrap: wrap;
-  column-gap: 24px;
-  flex-basis: calc((100% - 72px) / 4);
+  /* column-gap: 24px; */
+  /* flex-basis: calc((100% - 72px) / 4); */
+  gap: 72px;
 }
 
 .team-item {
@@ -334,7 +281,6 @@ body {
   line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
-  text-transform: capitalize;
   color: var(--title-text-color);
   margin-bottom: 72px;
 }
@@ -351,6 +297,7 @@ body {
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .team-about {
@@ -359,6 +306,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .social-list {
@@ -390,8 +338,8 @@ body {
 /*------------------- TEAM----------------- */
 /*------------------- CUSTOMERS----------------- */
 .customers {
-  padding-top: 130px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .customers-title {
@@ -407,10 +355,15 @@ body {
 
 .customers-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  gap: 72px 16px;
   justify-content: center;
 }
 
+.customers-item {
+  width: calc((100% - 16px) / 2);
+  height: 88px;
+}
 /* .customers-link-icon:hover,
 .customers-link-icon:focus {
   fill: #404bbf;
@@ -426,8 +379,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 168px;
-  height: 88px;
+  width: 100%;
+  height: 100%;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   color: #8e8f99;
@@ -440,23 +393,20 @@ body {
 /*------------------- CUSTOMERS----------------- */
 /*------------------- PORTFOLIO----------------- */
 .portfolio {
-  padding-top: 96px;
-  padding-bottom: 120px;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 .portfolio-list-button {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  gap: 16px 24px;
+  margin-bottom: 48px;
 }
 
 /* .portfolio-item-img:not(:nth-last-child(-n + 3)) {
   margin-bottom: 48px;
 } */
-
-.potfolio-item:not(:nth-child(5n)) {
-  margin-right: 24px;
-}
 
 .portfolio-button {
   padding: 12px 24px;
@@ -502,10 +452,6 @@ body {
 .portfolio-wrapper {
   position: relative;
   overflow: hidden;
-}
-
-.portfolio-img {
-  width: 360px;
 }
 
 .overlay {
@@ -564,20 +510,19 @@ body {
 /*------------------- FOOTER---------------- */
 .footer {
   background: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 96px;
+  padding-bottom: 96px;
   display: flex;
-  justify-content: flex-start;
-  /* max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto; */
+  justify-content: center;
 }
 
-.footer-container {
-  display: flex;
+.container-logo {
+  margin-bottom: 72px;
 }
 
 .footer-logo {
+  display: flex;
+  justify-content: center;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -588,30 +533,35 @@ body {
 }
 
 .footer-text {
-  width: 264px;
+  width: 268px;
   font-weight: 400;
   letter-spacing: 0.02em;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #e7e9fc;
-  margin-top: 16px;
+  margin: 16px auto;
 }
 
 .container-social {
-  margin-left: 120px;
+  margin-bottom: 72px;
 }
 
 .footer-title {
-  /* width: 96px;
-  height: 24px; */
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
-  text-align: left;
-  /* margin-bottom: 16px; */
+  display: flex;
+  justify-content: center;
+}
+
+.footer-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 16px;
 }
 
 .footer-list-link:hover,
@@ -634,21 +584,6 @@ body {
   fill: #f4f4fd;
 }
 
-.footer-list {
-  display: flex;
-  gap: 16px;
-  margin-top: 16px;
-}
-
-.container-subscribe {
-  display: flex;
-  margin-left: 80px;
-}
-
-.subscribe-message {
-  display: flex;
-}
-
 .text-subscribe {
   font-weight: 500;
   font-size: 16px;
@@ -656,14 +591,12 @@ body {
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
 }
 
-/* .subscribe-field {
-  display: flex;
- } */
-
 .email-form-input {
-  width: 264px;
+  width: 100%;
   height: 40px;
   color: #e7e9fc;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -672,13 +605,13 @@ body {
   background: #2e2f42;
   resize: none;
   padding-left: 16px;
+  margin-bottom: 16px;
 }
 
 .email-form-input::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 2;
-  display: flex;
   align-items: center;
   letter-spacing: 0.04em;
   color: rgba(255, 255, 255, 0.6);
@@ -700,7 +633,8 @@ body {
   border: none;
   width: 165px;
   margin-top: 0;
-  margin-left: 24px;
+  margin-left: auto;
+  margin-right: auto;
   transition: background-color var(--transition-duration-and-func),
     box-shadow var(--transition-duration-and-func);
 }
