--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,13 @@ body {
   color: var(--primary-text-color);
 }
 
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .link {
   text-decoration: none;
 }
@@ -603,7 +610,7 @@ body {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background: #2e2f42;
-  resize: none;
+  /* resize: none; */
   padding-left: 16px;
   margin-bottom: 16px;
 }
