--- a/css/desktop.css
+++ b/css/desktop.css
@@ -52,7 +52,7 @@
   }
 
   .service-title {
-    width: 500px;
+    max-width: 496px;
     margin: 0 auto 48px;
     font-size: 56px;
     line-height: 1.07;
