--- a/css/tablet.css
+++ b/css/tablet.css
@@ -117,7 +117,7 @@
   /*------------------- RULES----------------- */
   /*------------------- TEAM----------------- */
   .team-list {
-    gap: 64px;
+    gap: 64px 24px;
   }
   /*------------------- TEAM----------------- */
   /*------------------- CUSTOMERS----------------- */
