--- a/css/mobile.css
+++ b/css/mobile.css
@@ -61,7 +61,7 @@
     pointer-events: auto;
   }
 
-  .mobile-menu > .mobile-menu-container {
+  .mobile-menu > .container {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -159,7 +159,7 @@
   .mobile-menu-social-list {
     display: flex;
     justify-content: space-between;
-    gap: 56px;
+    /* gap: 56px; */
     /* padding-top: 48px;
     margin-top: 8px; */
   }
