--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,10 +1,10 @@
 @media screen and (min-width: 480px) {
   .container {
     width: 426px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+    /* padding-left: 15px;
+    padding-right: 15px; */
+    /* margin-left: auto;
+    margin-right: auto; */
   }
 }
 /*------------------- HEADER----------------- */
