--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body {
 }
 
 .container {
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -521,6 +522,7 @@ body {
   padding-bottom: 96px;
   display: flex;
   justify-content: center;
+  /* width: 100%; */
 }
 
 .container-logo {
