--- a/css/tablet.css
+++ b/css/tablet.css
@@ -44,8 +44,27 @@
     gap: 12px;
   }
 
+  .header-link:hover,
+  .header-link:focus,
+  .header-link:active,
+  .header-link.current {
+    color: var(--accent-color);
+  }
+
   .current {
+    position: relative;
     padding-bottom: 24px;
+  }
+
+  .current::after {
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    content: "";
+    width: 100%;
+    height: 4px;
+    background: var(--accent-color);
+    border-radius: 2px;
   }
 
   .header-address-list {
@@ -113,7 +132,6 @@
   .rules-text {
     width: 356px;
   }
-
   /*------------------- RULES----------------- */
   /*------------------- TEAM----------------- */
   .team-list {
@@ -129,7 +147,6 @@
 
   .customers-item {
     width: calc((100% - 48px) / 3);
-    height: 88px;
   }
 
   .customers-link {
@@ -144,8 +161,6 @@
   }
 
   .portfolio-list-button {
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
   }
 
@@ -190,20 +205,19 @@
   }
 
   .footer-list {
-    margin-top: 16px;
     gap: 16px;
   }
 
   .container-subscribe {
     display: flex;
     margin-left: 93px;
-    /* margin-left: 80px; */
   }
 
   .text-subscribe {
     display: block;
     margin-top: 0;
   }
+
   .subscribe-message {
     display: flex;
   }
